# hacker-news-client

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASE.md  RESEARCH.md  SECURITY.md  SUPPORT.md  biome.json  codecov.yml  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  coverage.yml  deploy-pages.yml  lint.yml  publish.yml  scorecard.yml  (+2 more)
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md
go/: README.md  client.go  client_test.go  errors.go  go.mod  items.go  unit_test.go
js/: README.md  eslint.config.js  example.js  package.json
python/: README.md  example.py  pyproject.toml
python/src/hacker_news_client/: __init__.py  client.py  errors.py  types.py
python/tests/: test_client.py  test_unit.py
ruby/: .rubocop.yml  Gemfile  README.md  Rakefile  example.rb  hacker-news-client.gemspec  hacker_news.gemspec  hacker_news_client.gemspec
rust/: Cargo.toml  README.md
rust/examples/: example.rs
rust/src/: client.rs  errors.rs  items.rs  lib.rs
rust/tests/: client.rs  unit.rs
scripts/: bump-version.sh  verify.sh
test/: mock-server.js  mock-server.test.js
ts/: LICENSE  README.md  eslint.config.js  example.ts  package.json  tsconfig.json
website/: .gitignore  README.md  astro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+96 files in other folders)
