[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hacker-news-client"
version = "0.1.0"
description = "Zero-dep client for the Hacker News Firebase API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["hacker-news", "hackernews", "hn", "api", "client"]
dependencies = []

[project.optional-dependencies]
async = ["httpx>=0.27"]
dev = ["ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/hacker_news_client"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
