[package]
name = "hacker-news-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Async client for the Hacker News Firebase API."
keywords = ["hacker-news", "hackernews", "hn", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-recursion = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.5"

[[example]]
name = "example"
path = "examples/example.rs"
